--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,6 +4,7 @@ ports:
 - port: 3000
 tasks:
 - init: >
-    meganz-syncer.sh
+    chmod +x ./meganz-syncer.sh
+    ./meganz-syncer.sh
   command: >
     python -m SimpleHTTPServer 3000
